# OneFingerBox

./: .cocos-project.json  CMakeLists.txt  README.md  mklink.bat
Classes/: AStar.cpp  AStar.h  AddBoxProp.cpp  AddBoxProp.h  AdmobHelper.cpp  AdmobHelper.h  AppDelegate.cpp  Audio.cpp  Audio.h  Barrier.cpp  Barrier.h  BigTree.cpp  BigTree.h  Blood.cpp  Blood.h  Bomb.cpp  Bomb.h  BottomFrame.cpp  BottomFrame.h  Box.cpp  Box.h  BugMonster.cpp  BugMonster.h  BugTestMonster.cpp  BugTestMonster.h  Cherry.cpp  Cherry.h  CountryLayer.cpp  CountryLayer.h  Cross.cpp  Cross.h  DataStream.cpp  DataStream.h  FloatScore.cpp  FloatScore.h  Flower.cpp  Flower.h  GameApp.cpp  GameApp.h  GameScene.cpp  (+43 more)
Resources/: OneFingerBox0.xml  OneFingerBox1.xml  ofboxxml.xml
Resources/res/: ofboxxml.xml
WapProj/: Package.StoreAssociation.xml  Package.appxmanifest  WapProj.wapproj  WapProj_StoreKey.pfx  WapProj_TemporaryKey.pfx  _pkginfo.txt
WapProj/BundleArtifacts/: x86.txt
WapProj/BundleArtifacts/Upload/: x86.txt
cocos2d/cmake/: .gitignore
cocos2d/cmake/Modules/: .gitignore
cocos2d/cocos/: .gitignore
cocos2d/cocos/2d/: .gitignore
cocos2d/cocos/2d/libcocos2d_win10/: .gitignore
cocos2d/cocos/2d/win10_props/: .gitignore
cocos2d/cocos/3d/: .gitignore
cocos2d/cocos/audio/: .gitignore
cocos2d/cocos/audio/android/: .gitignore
cocos2d/cocos/audio/apple/: .gitignore
cocos2d/cocos/audio/include/: .gitignore
cocos2d/cocos/audio/ios/: .gitignore
cocos2d/cocos/audio/linux/: .gitignore
cocos2d/cocos/audio/mac/: .gitignore
cocos2d/cocos/audio/tizen/: .gitignore
cocos2d/cocos/audio/win32/: .gitignore
cocos2d/cocos/audio/winrt/: .gitignore
cocos2d/cocos/base/: .gitignore
cocos2d/cocos/base/allocator/: .gitignore
cocos2d/cocos/deprecated/: .gitignore
cocos2d/cocos/editor-support/cocosbuilder/: .gitignore
cocos2d/cocos/editor-support/cocostudio/: .gitignore
cocos2d/cocos/editor-support/spine/: .gitignore
cocos2d/cocos/math/: .gitignore
cocos2d/cocos/navmesh/: .gitignore
cocos2d/cocos/network/: .gitignore
cocos2d/cocos/physics/: .gitignore
cocos2d/cocos/physics3d/: .gitignore
cocos2d/cocos/platform/: .gitignore
cocos2d/cocos/platform/android/: .gitignore
cocos2d/cocos/platform/apple/: .gitignore
cocos2d/cocos/platform/desktop/: .gitignore
cocos2d/cocos/platform/ios/: .gitignore
cocos2d/cocos/platform/linux/: .gitignore
cocos2d/cocos/platform/mac/: .gitignore
cocos2d/cocos/platform/tizen/: .gitignore
cocos2d/cocos/platform/win32/: .gitignore
cocos2d/cocos/platform/win8.1-universal/: .gitignore
cocos2d/cocos/platform/winrt/: .gitignore
cocos2d/cocos/renderer/: .gitignore
cocos2d/cocos/storage/local-storage/: .gitignore
cocos2d/cocos/ui/: .gitignore
cocos2d/cocos/ui/UIEditBox/: .gitignore
cocos2d/cocos/ui/proj.win32/: .gitignore
cocos2d/cocos/vr/: .gitignore
cocos2d/extensions/: .gitignore
cocos2d/extensions/GUI/CCControlExtension/: .gitignore
cocos2d/extensions/GUI/CCScrollView/: .gitignore
cocos2d/extensions/Particle3D/: .gitignore
cocos2d/extensions/Particle3D/PU/: .gitignore
cocos2d/extensions/assets-manager/: .gitignore
cocos2d/extensions/physics-nodes/: .gitignore
cocos2d/licenses/: .gitignore
cocos2d/templates/: .gitignore
cocos2d/templates/cpp-template-default/: .gitignore
cocos2d/templates/cpp-template-default/Classes/: .gitignore
cocos2d/templates/cpp-template-default/proj.win32/: .gitignore
cocos2d/templates/js-template-android-instant/res/: .gitignore
cocos2d/templates/js-template-default/: .gitignore
cocos2d/templates/js-template-default/res/: .gitignore
cocos2d/templates/js-template-default/src/: .gitignore
cocos2d/templates/js-template-link/: .gitignore
cocos2d/templates/lua-template-default/: .gitignore
cocos2d/templates/lua-template-default/res/: .gitignore
cocos2d/templates/lua-template-default/src/: .gitignore
cocos2d/tests/cpp-empty-test/: .gitignore
cocos2d/tests/cpp-empty-test/Classes/: .gitignore
cocos2d/tests/cpp-empty-test/proj.ios/: .gitignore
cocos2d/tests/cpp-empty-test/proj.mac/: .gitignore
cocos2d/tests/cpp-empty-test/proj.win10/: .gitignore
cocos2d/tests/cpp-empty-test/proj.win32/: .gitignore
cocos2d/tests/cpp-tests/Classes/: .gitignore
cocos2d/tests/cpp-tests/proj.ios/: .gitignore
cocos2d/tests/cpp-tests/proj.win10/: .gitignore
cocos2d/tests/cpp-tests/proj.win32/: .gitignore
cocos2d/tests/game-controller-test/: .gitignore
cocos2d/tests/game-controller-test/Classes/: .gitignore
cocos2d/tests/game-controller-test/proj.ios/: .gitignore
cocos2d/tests/game-controller-test/proj.win32/: .gitignore
cocos2d/tests/js-tests/: .gitignore
cocos2d/tests/js-tests/src/: .gitignore
cocos2d/tests/lua-empty-test/src/: .gitignore
cocos2d/tests/lua-game-controller-test/src/: .gitignore
cocos2d/tests/lua-tests/src/: .gitignore
cocos2d/tests/performance-tests/Classes/: .gitignore
cocos2d/tests/performance-tests/Resources/: .gitignore
cocos2d/tests/performance-tests/proj.ios/: .gitignore
cocos2d/tests/performance-tests/proj.win32/: .gitignore
cocos2d/tools/: .gitignore
cocos2d/tools/appveyor-scripts/: .gitignore
cocos2d/tools/bindings-generator/clang/: .gitignore
cocos2d/tools/bindings-generator/libclang/: .gitignore
cocos2d/tools/bindings-generator/test/: .gitignore
cocos2d/tools/coding-style/: .gitignore
cocos2d/tools/jenkins-scripts/: .gitignore
cocos2d/tools/make-package/: .gitignore
cocos2d/tools/particle/: .gitignore
cocos2d/tools/performance-analyze/: .gitignore
cocos2d/tools/tojs/: .gitignore
cocos2d/tools/tolua/: .gitignore
cocos2d/tools/travis-scripts/: .gitignore
cocos2d/web/licenses/: .gitignore
cocos2d/web/template/: .gitignore
cocos2d/web/tools/: .gitignore
proj.android/: settings.gradle
proj.android/app/: AndroidManifest.xml  build.gradle
proj.android/app/jni/: Android.mk
proj.ios_mac/OneFingerBox.xcodeproj/: project.pbxproj
proj.ios_mac/ios/: Info.plist
proj.ios_mac/mac/: Info.plist
proj.win32/: .gitignore  OneFingerBox.sln  OneFingerBox.vcxproj  OneFingerBox.vcxproj.filters
(+598 files in other folders)
